@@ -73,7 +73,7 @@ public class Translator extends Translations {
      * @return Returns the boolean representation of i
      */
     public static boolean int2Boolean(Integer i) {
-        return (i != null) && i.equals(new Integer(1));
+        return (i != null) && i.equals(1);
     }
 
     /**
@@ -92,7 +92,7 @@ public class Translator extends Translations {
      */
     public static User long2User(Integer l)
         throws Exception {
-        return UserFactory.lookupById(new Long(l.longValue()));
+        return UserFactory.lookupById(l.longValue());
     }
 
     /** Convert from Long to long
@@ -102,7 +102,7 @@ public class Translator extends Translations {
      */
     public static long long2Objlong(Long l)
         throws Exception {
-        return (l == null) ? 0 : l.longValue();
+        return (l == null) ? 0 : l;
     }
 
     /**
@@ -111,7 +111,7 @@ public class Translator extends Translations {
      * @return Integer version of the Long.
      */
     public static Integer long2Integer(Long l) {
-        return (l == null) ? null : new Integer(l.intValue());
+        return (l == null) ? null : l.intValue();
     }
 
     /**
@@ -140,7 +140,7 @@ public class Translator extends Translations {
      */
     public static Integer bigDecimal2IntObject(BigDecimal bd)
         throws Exception {
-        return (bd == null) ? new Integer(0) : new Integer(bd.intValue());
+        return (bd == null) ? Integer.valueOf(0) : Integer.valueOf(bd.intValue());
     }
 
     /** Convert from BigDecimal to long
@@ -161,7 +161,7 @@ public class Translator extends Translations {
      */
     public static Long bigDecimal2LongObj(BigDecimal bd)
         throws Exception {
-        return (bd == null) ? null : new Long(bd.longValue());
+        return (bd == null) ? null : bd.longValue();
     }
 
     /**
@@ -234,6 +234,6 @@ public class Translator extends Translations {
      * @return a boolean primitive
      */
     public static boolean boolean2boolean(Boolean b) {
-        return (b != null) && b.booleanValue();
+        return (b != null) && b;
     }
 }
