@@ -43,11 +43,10 @@ public class AuthHandlerTest extends RhnBaseTestCase {
         AuthHandler handler = new AuthHandler();
         User user = UserTestUtils.findNewUser("testUser",
                 "testOrg" + this.getClass().getSimpleName());
-        long dbLifetime = new Long(Config.get().getString("session_database_lifetime"))
-                                  .longValue();
+        long dbLifetime = Long.valueOf(Config.get().getString("session_database_lifetime"));
         long currentTime = System.currentTimeMillis() / 1000;
 
-        Integer invalidDuration = new Integer(String.valueOf(dbLifetime + 100));
+        Integer invalidDuration = Integer.valueOf(String.valueOf(dbLifetime + 100));
 
         //Test the login(String username, String password) method
         // - make sure we create a valid session
