@@ -14,8 +14,6 @@
  */
 package com.redhat.rhn.frontend.xmlrpc.system;
 
-import static java.util.stream.Collectors.toList;
-
 import com.redhat.rhn.FaultException;
 import com.redhat.rhn.common.client.ClientCertificate;
 import com.redhat.rhn.common.conf.ConfigDefaults;
@@ -83,6 +81,7 @@ import com.redhat.rhn.frontend.dto.ErrataOverview;
 import com.redhat.rhn.frontend.dto.EssentialChannelDto;
 import com.redhat.rhn.frontend.dto.HistoryEvent;
 import com.redhat.rhn.frontend.dto.PackageListItem;
+import com.redhat.rhn.frontend.dto.PackageMetadata;
 import com.redhat.rhn.frontend.dto.ProfileOverviewDto;
 import com.redhat.rhn.frontend.dto.ServerPath;
 import com.redhat.rhn.frontend.dto.SystemCurrency;
@@ -153,13 +152,7 @@ import com.redhat.rhn.manager.system.UpdateChildChannelsCommand;
 import com.redhat.rhn.manager.system.VirtualizationActionCommand;
 import com.redhat.rhn.manager.token.ActivationKeyManager;
 import com.redhat.rhn.taskomatic.TaskomaticApi;
-
 import com.suse.manager.webui.utils.gson.BootstrapHostsJson;
-
-import org.apache.commons.lang3.StringUtils;
-import org.apache.log4j.Logger;
-import org.cobbler.SystemRecord;
-
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileNotFoundException;
@@ -184,6 +177,11 @@ import java.util.TimeZone;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
+import org.apache.commons.lang3.StringUtils;
+import org.apache.log4j.Logger;
+import org.cobbler.SystemRecord;
+
+import static java.util.stream.Collectors.toList;
 
 /**
  * SystemHandler
@@ -251,7 +249,7 @@ public class SystemHandler extends BaseHandler {
         ActivationKey key = ActivationKeyManager.getInstance().
                 createNewReActivationKey(loggedInUser, server, note);
 
-        key.setUsageLimit(new Long(1));
+        key.setUsageLimit(1L);
 
         // Return the "key" for this activation key :-/
         return key.getKey();
@@ -304,7 +302,7 @@ public class SystemHandler extends BaseHandler {
         final Entitlement entitlement = EntitlementManager.getByName(entitlementLevel);
 
         // Make sure we got a valid entitlement and the server can be entitled to it
-        validateEntitlements(new ArrayList() { { add(entitlement); } });
+        validateEntitlements(new ArrayList<Entitlement>() { { add(entitlement); } });
         if (!SystemManager.canEntitleServer(server, entitlement)) {
             throw new PermissionCheckFailureException();
         }
@@ -394,7 +392,7 @@ public class SystemHandler extends BaseHandler {
             // therefore, convert the input to Long, since channel ids are
             // internally represented as Long
             for (Object channelId : channelIdsOrLabels) {
-                channelIds.add(new Long((Integer) channelId));
+                channelIds.add(Long.valueOf((Integer) channelId));
             }
         }
 
@@ -436,7 +434,7 @@ public class SystemHandler extends BaseHandler {
         Server server = lookupServer(loggedInUser, sid);
         UpdateBaseChannelCommand cmd =
                 new UpdateBaseChannelCommand(
-                        loggedInUser, server, new Long(cid.longValue()));
+                        loggedInUser, server, cid.longValue());
         cmd.setScheduleApplyChannelsState(true);
         ValidatorError ve = cmd.store();
         if (ve != null) {
@@ -479,7 +477,7 @@ public class SystemHandler extends BaseHandler {
         if (StringUtils.isEmpty(channelLabel)) {
             // if user provides an empty string for the channel label, they are requesting
             // to remove the base channel
-            cmd = new UpdateBaseChannelCommand(loggedInUser, server, new Long(-1));
+            cmd = new UpdateBaseChannelCommand(loggedInUser, server, -1L);
         }
         else {
             List<String> channelLabels = new ArrayList<String>();
@@ -753,6 +751,7 @@ public class SystemHandler extends BaseHandler {
      *     #struct("server details")
      *       #prop_desc("int", "id", "The server's id")
      *       #prop_desc("string", "name", "The server's name")
+     *       #prop_desc("string", "minion_id", "The server's minion id, in case it is a salt minion client")
      *       #prop_desc("dateTime.iso8601", "last_checkin",
      *         "Last time server successfully checked in (in UTC)")
      *       #prop_desc("int", "ram", "The amount of physical memory in MB.")
@@ -788,10 +787,11 @@ public class SystemHandler extends BaseHandler {
                 Map<String, Object> m = new HashMap<String, Object>();
                 m.put("id", server.getId());
                 m.put("name", server.getName());
+                m.put("minion_id", server.getMinionId());
                 m.put("last_checkin", convertLocalToUtc(server.getLastCheckin()));
 
-                m.put("ram", new Long(server.getRam()));
-                m.put("swap", new Long(server.getSwap()));
+                m.put("ram", server.getRam());
+                m.put("swap", server.getSwap());
 
                 CPU cpu = server.getCpu();
                 if (cpu == null) {
@@ -851,7 +851,7 @@ public class SystemHandler extends BaseHandler {
         ret.put("id", channel.getId());
         ret.put("name", channel.getName());
         ret.put("label", channel.getLabel());
-        ret.put("current_base", currentBase ? new Integer(1) : new Integer(0));
+        ret.put("current_base", currentBase ? Integer.valueOf(1) : Integer.valueOf(0));
         return ret;
     }
 
@@ -1268,6 +1268,7 @@ public class SystemHandler extends BaseHandler {
      * @xmlrpc.param #param("string", "sessionKey")
      * @xmlrpc.param #param("int", "serverId")
      * @xmlrpc.returntype
+     * #array()
      *      #struct("package")
      *          #prop("string", "name")
      *          #prop("string", "version")
@@ -1276,6 +1277,7 @@ public class SystemHandler extends BaseHandler {
      *          #prop("int", "id")
      *          #prop("string", "arch_label")
      *      #struct_end()
+     * #array_end()
      */
     public List<Map<String, Object>> listAllInstallablePackages(User loggedInUser,
             Integer sid) throws FaultException {
@@ -1770,7 +1772,7 @@ public class SystemHandler extends BaseHandler {
         Server server = lookupServer(loggedInUser, sid);
         ServerGroupManager manager = ServerGroupManager.getInstance();
         try {
-            ManagedServerGroup group = manager.lookup(new Long(sgid.longValue()),
+            ManagedServerGroup group = manager.lookup(sgid.longValue(),
                     loggedInUser);
 
 
@@ -2531,7 +2533,7 @@ public class SystemHandler extends BaseHandler {
     public int provisionVirtualGuest(User loggedInUser, Integer sid, String guestName,
             String profileName) {
         return provisionVirtualGuest(loggedInUser, sid, guestName, profileName,
-                new Integer(512), new Integer(1), new Integer(3), "");
+                512, 1, 3, "");
     }
 
     /**
@@ -2713,13 +2715,13 @@ public class SystemHandler extends BaseHandler {
         }
 
         ProvisionVirtualInstanceCommand cmd = new ProvisionVirtualInstanceCommand(
-                new Long(sid.longValue()), ksdata.getId(), loggedInUser, new Date(),
+                sid.longValue(), ksdata.getId(), loggedInUser, new Date(),
                 ConfigDefaults.get().getCobblerHost());
 
         cmd.setGuestName(guestName);
-        cmd.setMemoryAllocation(new Long(memoryMb));
-        cmd.setVirtualCpus(new Long(vcpus.toString()));
-        cmd.setLocalStorageSize(new Long(storageGb));
+        cmd.setMemoryAllocation(Long.valueOf(memoryMb));
+        cmd.setVirtualCpus(Long.valueOf(vcpus.toString()));
+        cmd.setLocalStorageSize(Long.valueOf(storageGb));
         // setting an empty string generates a random mac address
         cmd.setMacAddress(macAddress);
         // setting an empty string generates a default virt path
@@ -2917,7 +2919,7 @@ public class SystemHandler extends BaseHandler {
      */
     public String getRunningKernel(User loggedInUser, Integer sid) {
         try {
-            Server server = SystemManager.lookupByIdAndUser(new Long(sid.longValue()),
+            Server server = SystemManager.lookupByIdAndUser(sid.longValue(),
                     loggedInUser);
             if (server.getRunningKernel() != null) {
                 return server.getRunningKernel();
@@ -3303,9 +3305,9 @@ public class SystemHandler extends BaseHandler {
         Server target = null;
         Server source = null;
         try {
-            target = SystemManager.lookupByIdAndUser(new Long(sid1.longValue()),
+            target = SystemManager.lookupByIdAndUser(sid1.longValue(),
                     loggedInUser);
-            source = SystemManager.lookupByIdAndUser(new Long(sid2.longValue()),
+            source = SystemManager.lookupByIdAndUser(sid2.longValue(),
                     loggedInUser);
         }
         catch (LookupException e) {
@@ -3320,8 +3322,8 @@ public class SystemHandler extends BaseHandler {
         DataResult result = null;
         try {
             result = ProfileManager.compareServerToServer(
-                    new Long(sid1.longValue()),
-                    new Long(sid2.longValue()), loggedInUser.getOrg().getId(), null);
+                    sid1.longValue(),
+                    sid2.longValue(), loggedInUser.getOrg().getId(), null);
         }
         catch (MissingEntitlementException e) {
             throw new com.redhat.rhn.frontend.xmlrpc.MissingEntitlementException();
@@ -3392,8 +3394,8 @@ public class SystemHandler extends BaseHandler {
     public Map<String, Long> getMemory(User loggedInUser, Integer sid) {
         Server server = lookupServer(loggedInUser, sid);
         Map<String, Long> memory = new HashMap<String, Long>();
-        memory.put("swap", new Long(server.getSwap()));
-        memory.put("ram", new Long(server.getRam()));
+        memory.put("swap", server.getSwap());
+        memory.put("ram", server.getRam());
         return memory;
     }
 
@@ -3436,7 +3438,7 @@ public class SystemHandler extends BaseHandler {
         if (!allowModules) {
             boolean hasModules = false;
             for (Integer sid : sids) {
-                Server server = SystemManager.lookupByIdAndUser(new Long(sid.longValue()), loggedInUser);
+                Server server = SystemManager.lookupByIdAndUser(sid.longValue(), loggedInUser);
                 for (Channel channel : server.getChannels()) {
                     if (channel.getModules() != null) {
                         hasModules = true;
@@ -3450,7 +3452,7 @@ public class SystemHandler extends BaseHandler {
         }
 
         for (Integer sid : sids) {
-            Server server = SystemManager.lookupByIdAndUser(new Long(sid.longValue()),
+            Server server = SystemManager.lookupByIdAndUser(sid.longValue(),
                     loggedInUser);
 
             // Would be nice to do this check at the Manager layer but upset many tests,
@@ -3498,7 +3500,7 @@ public class SystemHandler extends BaseHandler {
 
             Map<String, Long> pkgMap = new HashMap<String, Long>();
 
-            Package p = PackageManager.lookupByIdAndUser(new Long(pkgId.longValue()), user);
+            Package p = PackageManager.lookupByIdAndUser(pkgId.longValue(), user);
 
             if (p == null) {
                 throw new InvalidPackageException("cannot find package with name " +
@@ -4104,7 +4106,7 @@ public class SystemHandler extends BaseHandler {
      *  #array_end()
      */
     public Set<Note> listNotes(User loggedInUser , Integer sid) {
-        Server server = SystemManager.lookupByIdAndUser(new Long(sid.longValue()),
+        Server server = SystemManager.lookupByIdAndUser(sid.longValue(),
                 loggedInUser);
         return server.getNotes();
     }
@@ -4122,7 +4124,7 @@ public class SystemHandler extends BaseHandler {
      * @xmlrpc.returntype #array_single("string", "fqdn")
      */
     public List<String> listFqdns(User loggedInUser, Integer sid) {
-        return ServerFactory.listFqdns(new Long(sid.longValue()));
+        return ServerFactory.listFqdns(sid.longValue());
     }
 
     /**
@@ -4154,7 +4156,7 @@ public class SystemHandler extends BaseHandler {
     public List<Map<String, Object>> listPackagesFromChannel(User loggedInUser,
             Integer sid,
             String channelLabel) {
-        SystemManager.lookupByIdAndUser(new Long(sid.longValue()),
+        SystemManager.lookupByIdAndUser(sid.longValue(),
                 loggedInUser);
         Channel channel = ChannelFactory.lookupByLabelAndUser(channelLabel,
                 loggedInUser);
@@ -4178,7 +4180,7 @@ public class SystemHandler extends BaseHandler {
      */
     public Long scheduleHardwareRefresh(User loggedInUser, Integer sid,
             Date earliestOccurrence) {
-        Server server = SystemManager.lookupByIdAndUser(new Long(sid.longValue()),
+        Server server = SystemManager.lookupByIdAndUser(sid.longValue(),
                 loggedInUser);
 
         try {
@@ -4213,7 +4215,7 @@ public class SystemHandler extends BaseHandler {
      */
     public int schedulePackageRefresh(User loggedInUser, Integer sid,
             Date earliestOccurrence) {
-        Server server = SystemManager.lookupByIdAndUser(new Long(sid.longValue()),
+        Server server = SystemManager.lookupByIdAndUser(sid.longValue(),
                 loggedInUser);
 
         try {
@@ -4262,16 +4264,16 @@ public class SystemHandler extends BaseHandler {
                                      Date earliest) {
 
         ScriptActionDetails scriptDetails = ActionManager.createScript(username, groupname,
-                new Long(timeout.longValue()), script);
+                timeout.longValue(), script);
         ScriptAction action = null;
 
         List<Long> servers = new ArrayList<Long>();
 
         for (Iterator<Integer> sysIter = systemIds.iterator(); sysIter.hasNext();) {
             Integer sidAsInt = sysIter.next();
-            Long sid = new Long(sidAsInt.longValue());
+            Long sid = sidAsInt.longValue();
             try {
-                SystemManager.lookupByIdAndUser(new Long(sid.longValue()),
+                SystemManager.lookupByIdAndUser(sid.longValue(),
                         loggedInUser);
                 servers.add(sid);
             }
@@ -4294,7 +4296,7 @@ public class SystemHandler extends BaseHandler {
             throw new TaskomaticApiException(e.getMessage());
         }
 
-        return new Integer(action.getId().intValue());
+        return action.getId().intValue();
     }
 
     /**
@@ -4485,7 +4487,7 @@ public class SystemHandler extends BaseHandler {
         ScriptRunAction action = null;
         try {
             action = (ScriptRunAction)ActionManager.lookupAction(loggedInUser,
-                    new Long(actionId.longValue()));
+                    actionId.longValue());
         }
         catch (LookupException e) {
             throw new NoSuchActionException(actionId.toString(), e);
@@ -4514,7 +4516,7 @@ public class SystemHandler extends BaseHandler {
     public Long scheduleReboot(User loggedInUser, Integer sid,
             Date earliestOccurrence) {
         try {
-            Server server = SystemManager.lookupByIdAndUser(new Long(sid.longValue()),
+            Server server = SystemManager.lookupByIdAndUser(sid.longValue(),
                     loggedInUser);
 
             Action a = ActionManager.scheduleRebootAction(loggedInUser, server,
@@ -4544,7 +4546,7 @@ public class SystemHandler extends BaseHandler {
     public Object getDetails(User loggedInUser, Integer serverId) {
         Server server = null;
         try {
-            server = SystemManager.lookupByIdAndUser(new Long(serverId.longValue()),
+            server = SystemManager.lookupByIdAndUser(serverId.longValue(),
                     loggedInUser);
         }
         catch (LookupException e) {
@@ -4614,7 +4616,7 @@ public class SystemHandler extends BaseHandler {
 
         Server server = null;
         try {
-            server = SystemManager.lookupByIdAndUser(new Long(serverId.longValue()),
+            server = SystemManager.lookupByIdAndUser(serverId.longValue(),
                     loggedInUser);
         }
         catch (LookupException e) {
@@ -4746,7 +4748,7 @@ public class SystemHandler extends BaseHandler {
     public Integer setLockStatus(User loggedInUser, Integer serverId, boolean lockStatus) {
         Server server = null;
         try {
-            server = SystemManager.lookupByIdAndUser(new Long(serverId.longValue()),
+            server = SystemManager.lookupByIdAndUser(serverId.longValue(),
                     loggedInUser);
         }
         catch (LookupException e) {
@@ -4806,7 +4808,7 @@ public class SystemHandler extends BaseHandler {
         }
         Server server = null;
         try {
-            server = SystemManager.lookupByIdAndUser(new Long(serverId.longValue()),
+            server = SystemManager.lookupByIdAndUser(serverId.longValue(),
                     loggedInUser);
         }
         catch (LookupException e) {
@@ -4887,7 +4889,7 @@ public class SystemHandler extends BaseHandler {
 
         Server server = null;
         try {
-            server = SystemManager.lookupByIdAndUser(new Long(serverId.longValue()),
+            server = SystemManager.lookupByIdAndUser(serverId.longValue(),
                     loggedInUser);
         }
         catch (LookupException e) {
@@ -5110,7 +5112,7 @@ public class SystemHandler extends BaseHandler {
     public int createPackageProfile(User loggedInUser, Integer sid,
             String profileLabel, String desc) {
 
-        Server server = SystemManager.lookupByIdAndUser(new Long(sid.longValue()),
+        Server server = SystemManager.lookupByIdAndUser(sid.longValue(),
                 loggedInUser);
 
         try {
@@ -5154,7 +5156,7 @@ public class SystemHandler extends BaseHandler {
     public Object[] comparePackageProfile(User loggedInUser, Integer serverId,
             String profileLabel) {
 
-        Long sid = new Long(serverId.longValue());
+        Long sid = serverId.longValue();
         SystemManager.lookupByIdAndUser(sid, loggedInUser);
 
         Profile profile = ProfileFactory.findByNameAndOrgId(profileLabel,
@@ -5164,7 +5166,7 @@ public class SystemHandler extends BaseHandler {
             throw new InvalidProfileLabelException(profileLabel);
         }
 
-        DataResult dr = ProfileManager.compareServerToProfile(sid, profile.getId(),
+        DataResult<PackageMetadata> dr = ProfileManager.compareServerToProfile(sid, profile.getId(),
                 loggedInUser.getOrg().getId(), null);
 
         return dr.toArray();
@@ -5219,9 +5221,9 @@ public class SystemHandler extends BaseHandler {
         Server target = null;
         Server source = null;
         try {
-            target = SystemManager.lookupByIdAndUser(new Long(targetServerId.longValue()),
+            target = SystemManager.lookupByIdAndUser(targetServerId.longValue(),
                     loggedInUser);
-            source = SystemManager.lookupByIdAndUser(new Long(sourceServerId.longValue()),
+            source = SystemManager.lookupByIdAndUser(sourceServerId.longValue(),
                     loggedInUser);
         }
         catch (LookupException e) {
@@ -5256,8 +5258,8 @@ public class SystemHandler extends BaseHandler {
         Action action = null;
         try {
            action = ProfileManager.syncToSystem(loggedInUser,
-                   new Long(targetServerId.longValue()),
-                   new Long(sourceServerId.longValue()), pkgIdCombos, null,
+                   targetServerId.longValue(),
+                   sourceServerId.longValue(), pkgIdCombos, null,
                     earliest);
         }
         catch (MissingEntitlementException e) {
@@ -5525,7 +5527,7 @@ public class SystemHandler extends BaseHandler {
         Map<String, String> context = new HashMap<String, String>();
         //convert from mega to kilo bytes
         context.put(VirtualizationSetMemoryAction.SET_MEMORY_STRING,
-                new Integer(memory * 1024).toString());
+                Integer.valueOf(memory * 1024).toString());
 
 
         VirtualizationActionCommand cmd = new VirtualizationActionCommand(loggedInUser,
@@ -6365,7 +6367,7 @@ public class SystemHandler extends BaseHandler {
     public List<Map<String, Object>> listExtraPackages(User loggedInUser,
             Integer serverId) {
         DataResult<PackageListItem> dr =
-                SystemManager.listExtraPackages(new Long(serverId));
+                SystemManager.listExtraPackages(Long.valueOf(serverId));
 
         List<Map<String, Object>> returnList = new ArrayList<Map<String, Object>>();
 
@@ -6688,7 +6690,23 @@ public class SystemHandler extends BaseHandler {
         if (targets.size() > 0) {
             SUSEProductSet targetProducts = null;
             if (StringUtils.isBlank(targetIdent)) {
-                targetProducts = targets.get(targets.size() - 1);
+                log.info("Target migration id is empty. " +
+                        "Looking for the closes product version having synced channels.");
+                List<SUSEProductSet> syncedTargets = targets.stream()
+                        .filter(ps -> {
+                            if (log.isDebugEnabled()) {
+                                if (ps.getIsEveryChannelSynced()) {
+                                    log.debug(ps.toString() + " is completely synced.");
+                                }
+                                else {
+                                    log.debug("Discarding " + ps.toString() + ". Is not completely synced.");
+                                }
+                            }
+                            return ps.getIsEveryChannelSynced();
+                        })
+                        .collect(toList());
+                targetProducts = !syncedTargets.isEmpty() ? syncedTargets.get(syncedTargets.size() - 1) : null;
+                log.info("Using migration target: " + targetProducts);
             }
             else {
                 for (SUSEProductSet target : targets) {
@@ -6700,8 +6718,14 @@ public class SystemHandler extends BaseHandler {
                 }
             }
             if (targetProducts == null) {
+                String targetsInfo = "Possible targets with incompletely synced channels: " +
+                        System.getProperty("line.separator") +
+                        targets.stream().map(t -> t + " : " +
+                                t.getMissingChannelsMessage())
+                                .collect(Collectors.joining(System.getProperty("line.separator")));
+                log.error("No target products found for migration: " + targetsInfo);
                 throw new FaultException(-1, "servicePackMigrationNoTarget",
-                        "No target found for SP migration");
+                        "No target found for SP migration. " + targetsInfo);
             }
             if (!targetProducts.getIsEveryChannelSynced()) {
                 throw new FaultException(-1, "servicePackMigrationNoTarget",
@@ -6814,7 +6838,7 @@ public class SystemHandler extends BaseHandler {
      *      #array_end()
      */
     public Object[] listSuggestedReboot(User loggedInUser) {
-            return SystemManager.requiringRebootList(loggedInUser, null).toArray();
+            return SystemManager.requiringRebootList(loggedInUser).toArray();
     }
 
     /**
