@@ -33,7 +33,7 @@ public class XmlRpcTestUtils {
         //Log in the user (handles authentication and active/disabled logic)
 
         String lifetime = Config.get().getString("session_database_lifetime");
-        long duration = new Long(lifetime).longValue();
+        long duration = Long.valueOf(lifetime);
 
         //Create a new session with the user
         WebSession session = SessionManager.makeSession(user.getId(), duration);
