@@ -65,6 +65,7 @@ import com.redhat.rhn.domain.rhnpackage.PackageDelta;
 import com.redhat.rhn.domain.rhnpackage.PackageFactory;
 import com.redhat.rhn.domain.rhnset.RhnSet;
 import com.redhat.rhn.domain.rhnset.RhnSetElement;
+import com.redhat.rhn.domain.role.RoleFactory;
 import com.redhat.rhn.domain.server.MinionServer;
 import com.redhat.rhn.domain.server.Server;
 import com.redhat.rhn.domain.user.User;
@@ -205,7 +206,7 @@ public class ActionManager extends BaseManager {
      * can't be looked up.
      */
     public static Action lookupAction(User user, Long aid) {
-        Action returnedAction = null;
+        Action returnedAction;
         if (aid == null) {
             return null;
         }
@@ -216,7 +217,9 @@ public class ActionManager extends BaseManager {
         SelectMode m = ModeFactory.getMode("Action_queries", "visible_to_user");
         Map<String, Object> params = new HashMap<String, Object>();
         params.put("user_id", user.getId());
+        params.put("org_id", user.getOrg().getId());
         params.put("aid", aid);
+        params.put("include_orphans", user.hasRole(RoleFactory.ORG_ADMIN) ? "Y" : "N");
         if (m.execute(params).size() < 1) {
             returnedAction = null;
         }
@@ -729,7 +732,7 @@ public class ActionManager extends BaseManager {
 
         ServerAction sa = new ServerAction();
         sa.setStatus(ActionFactory.STATUS_QUEUED);
-        sa.setRemainingTries(new Long(5));
+        sa.setRemainingTries(5L);
         sa.setServer(server);
 
         sa.setParentAction(action);
@@ -794,7 +797,7 @@ public class ActionManager extends BaseManager {
         Map<String, Object> params = new HashMap<String, Object>();
         params.put("user_id", user.getId());
         params.put("org_id", user.getOrg().getId());
-        params.put("age", new Long(age));
+        params.put("age", age);
 
         if (pc != null) {
             return makeDataResult(params, params, pc, m);
@@ -910,6 +913,7 @@ public class ActionManager extends BaseManager {
         Map<String, Object> params = new HashMap<String, Object>();
         params.put("user_id", user.getId());
         params.put("org_id", user.getOrg().getId());
+        params.put("include_orphans", user.hasRole(RoleFactory.ORG_ADMIN) ? "Y" : "N");
         if (setLabel != null) {
             params.put("set_label", setLabel);
         }
@@ -1216,7 +1220,7 @@ public class ActionManager extends BaseManager {
                 params.put("v", pm.getSystem().getVersion());
                 params.put("r", pm.getSystem().getRelease());
                 String epoch = pm.getSystem().getEpoch();
-                params.put("e", "".equals(epoch) ? null : epoch);
+                params.put("e", StringUtils.isEmpty(epoch) ? null : epoch);
                 params.put("a", pm.getSystem().getArch() != null ?
                         pm.getSystem().getArch() : "");
                 m.executeUpdate(params);
@@ -1258,7 +1262,7 @@ public class ActionManager extends BaseManager {
                     params.put("v", pm.getSystem().getVersion());
                     params.put("r", pm.getSystem().getRelease());
                     epoch = pm.getSystem().getEpoch();
-                    params.put("e", epoch.equals("") ? null : epoch);
+                    params.put("e", StringUtils.isEmpty(epoch) ? null : epoch);
                     params.put("a", pm.getSystem().getArch() != null ?
                             pm.getOther().getArch() : "");
                     m.executeUpdate(params);
@@ -1269,7 +1273,7 @@ public class ActionManager extends BaseManager {
                 params.put("v", pm.getOther().getVersion());
                 params.put("r", pm.getOther().getRelease());
                 epoch = pm.getOther().getEpoch();
-                params.put("e", epoch.equals("") ? null : epoch);
+                params.put("e", StringUtils.isEmpty(epoch) ? null : epoch);
                 params.put("a", pm.getOther().getArch() != null ?
                         pm.getOther().getArch() : "");
                 m.executeUpdate(params);
@@ -1625,7 +1629,7 @@ public class ActionManager extends BaseManager {
         kad.setDiskGb(pcmd.getLocalStorageSize());
         kad.setMemMb(pcmd.getMemoryAllocation().longValue());
         kad.setDiskPath(pcmd.getFilePath());
-        kad.setVcpus(new Long(pcmd.getVirtualCpus()));
+        kad.setVcpus(Long.valueOf(pcmd.getVirtualCpus()));
         kad.setGuestName(pcmd.getGuestName());
         kad.setMacAddress(pcmd.getMacAddress());
         kad.setKickstartSessionId(ksSessionId);
